--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,12 @@
-beautifulsoup4
-py
-pytest
-requests
-selenium
+attrs==17.4.0
+beautifulsoup4==4.6.0
+certifi==2018.1.18
+chardet==3.0.4
+idna==2.6
+pluggy==0.6.0
+py==1.5.2
+pytest==3.3.2
+requests==2.18.4
+selenium==3.8.1
+six==1.11.0
+urllib3==1.22
