--- a/requirements.txt
+++ b/requirements.txt
@@ -4,9 +4,13 @@ certifi==2018.1.18
 chardet==3.0.4
 factory-boy==2.10.0
 Faker==0.8.11
+flake8==3.5.0
 idna==2.6
+mccabe==0.6.1
 pluggy==0.6.0
 py==1.5.2
+pycodestyle==2.3.1
+pyflakes==1.6.0
 pytest==3.3.2
 python-dateutil==2.6.1
 requests==2.18.4
