--- a/requirements.txt
+++ b/requirements.txt
@@ -12,6 +12,7 @@ py==1.5.2
 pycodestyle==2.3.1
 pyflakes==1.6.0
 pytest==3.3.2
+pytest-csv==1.1.1
 python-dateutil==2.6.1
 requests==2.18.4
 selenium==3.8.1
