--- a/requirements.txt
+++ b/requirements.txt
@@ -2,14 +2,21 @@ attrs==17.4.0
 beautifulsoup4==4.6.0
 certifi==2018.1.18
 chardet==3.0.4
+colorama==0.3.9
 factory-boy==2.10.0
 Faker==0.8.11
 flake8==3.5.0
+flake8-bugbear==18.2.0
+flake8-docstrings==1.3.0
+flake8-import-order==0.17.1
+flake8-polyfill==1.0.2
 idna==2.6
 mccabe==0.6.1
+pep8-naming==0.7.0
 pluggy==0.6.0
 py==1.5.2
 pycodestyle==2.3.1
+pydocstyle==2.1.1
 pyflakes==1.6.0
 pytest==3.3.2
 pytest-csv==1.1.1
@@ -17,5 +24,6 @@ python-dateutil==2.6.1
 requests==2.18.4
 selenium==3.8.1
 six==1.11.0
+snowballstemmer==1.2.1
 text-unidecode==1.2
 urllib3==1.22
